2015-01.10 [1.2.5]
 * Unsupported skin bugfix by Libor Zoubek. Thx
2015-01-04 [1.2.4]
 * Player overridden to unpause on start and seek (experimental)
 * JSON playlist parsing bugfix
 * Available qualities revised (slower but working)
2015-01-03 [1.2.3]
 * Auto view mode default fix
2015-01-03 [1.2.2]
 * Bugfix
2015-01-03 [1.2.1]
 * Automatic view mode fix 
2015-01-03 [1.2.0]
 * Episode listing is default for programmes listed by letter or genre (allowes favouriting)
 * Windows path join bugfix
 * Thread concurence datetime import bugfix
 * Translation of well known errors (etc. license expired)
 * Automatic view mode
2014-12-22 [1.1.0]
 * Bugfix: listing of letters with diacritic
 * Well known errors
 * Error reporting
2014-10-12 [1.0.0]
 * First version of plugin
2014-10-07 [0.1.0]
 * First version of wrapper
 