@@ -1,1 +1,1 @@
-7fbb789612d2e8b4a7f711a8e8567f6d *addons.xml
+747b8c23775ab6aa84aec4a84ebc292c *addons.xml
